# qmk_build

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  access.json  access_build.json  build.json  build.rs  compile  h7.json  qmk_build  readme.md  schema
keyboards/access/: access.h  compile  config.h  info.json  rules.mk
keyboards/elpekenin/access/: access.c  rgb_matrix_kb.inc  rules.mk
keymaps/stm32_tests/: config.h  halconf.h  keymap.c  mcuconf.h  rules.mk
misc/: fs_lfs_sdmmc_card.c  launch.json
patches/: h7_ram_ld.diff  qmk_userspace.diff  sdmmc_fs.diff  spi_comms.diff  xap_dynamic_keymap.diff  xap_keytester.diff
src/: build.rs  cli.rs  config.rs  git.rs  json_config.rs  logging.rs  main.rs  operations.rs  self_update.rs  sh.rs
src/operations/: checkout.rs  copy.rs  diff.rs  exec.rs  merge.rs  pr.rs  script.rs  wget.rs
users/elpekenin/: user_power.c
users/elpekenin/autocorrect/: autocorrect_all.txt
userspace/: elpekenin.c  rules.mk  user_power.c  user_process.c  user_utils.h  xap.hjson
userspace/autocorrect/: autocorrect_spanish.txt
userspace/keylog/: user_keylog.c  user_keylog.h
userspace/layers/: user_layers.h
userspace/mk/: codegen.mk  custom_features.mk  rgb_matrix.mk  xap.mk
userspace/painter/: graphics.c  graphics.h  qp_comms_sipo.c  qp_logging.c  qp_logging.h  qp_over_xap.c
userspace/placeholders/: placeholders.h
userspace/rgb/: user_rgb_matrix.c
userspace/scripts/: features.py  qp_resources.py
userspace/split/: split_config.h  user_transactions.c  user_transactions.h
userspace/xap/: user_xap.c  user_xap.h
(+27 files in other folders)
