[package]
name = "qmk_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
simplelog = { version = "^0.11.0", features = ["paris"] }
serde_json = "1.0.104"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
