[package]
name = "qmk_build"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
simplelog = { version = "0.12", features = ["paris"] }
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
deser-hjson = "2.0.0"
schemars = "0.8.12"
serde_json = "1.0.104"
enum_dispatch = "0.3.12"
